swap d21 polls for PDFs

--- a/index.html
+++ b/index.html
@@ -82,66 +82,68 @@
     <div class="row">
       <div class="columns">
         <h3>We need your Feedback!</h3>
-        <p class="text-large full-width no-margin-bottom">The East Harlem Neighborhood Plan has developed topic-specific objectives and recommendations that have been approved by the Steering Committee. We are collecting feedback at the community forum on <strong>January 27</strong>. In the meantime, please help prioritize these recommendations using these online polls.</p>
-        <p class="full-width text-right some-margin-bottom"><small><em><strong>* Powered by D21</strong></em></small></p>
       </div>
-      <div class="columns large-5">
-        <p>For each poll, you're given “plus votes” and “minus votes” (indicated by a + or -). Use plus votes to identify which objectives or recommendations you most want to prioritize for implementation. Une minus votes to identify recommendations that you disagree with. The number of + and – votes you have is limited, so use them wisely.</p>
-        <p class="text-large"><strong>These polls will close at 11:59pm on January 31.</strong></p>
-        <p>The Steering Committee will then review these priorities and use your feedback to strengthen the final plan.</p>
+      <div class="columns large-8">
+        <p class="text-xlarge full-width tiny-margin-bottom">The East Harlem Neighborhood Plan has developed topic-specific objectives and recommendations that have been approved by the Steering Committee. We are collecting feedback at the community forum on <strong>January&nbsp;27</strong>. In the meantime, please help prioritize these recommendations using these online polls.</p>
+        <p class="full-width some-margin-bottom"><small><em><strong>* Polls powered by D21</strong></em></small></p>
       </div>
-      <div class="columns large-7">
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63b1llQTNhUnkwMk0/view">Workforce/Economic Development <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom disabled" href="#" target="_blank">Take the Poll</a></div>
+      <div class="columns large-4">
+        <p class="text-small">For each poll, you're given “plus votes” and “minus votes” (indicated by a + or -). Use plus votes to identify which objectives or recommendations you most want to prioritize for implementation. Une minus votes to identify recommendations that you disagree with. The number of + and – votes you have is limited, so use them wisely.</p>
+        <p class=""><strong>These polls will close at 11:59pm on January 31.</strong></p>
+        <p class="text-small extra-margin-bottom">The Steering Committee will then review these priorities and use your feedback to strengthen the final plan.</p>
+      </div>
+      <div class="columns">
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Objectives</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4kCa9i3Og" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63VmJBdGJFRTF6R00/view">Pre-K/Afterschool/Daycare <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/41yQYihOl" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Arts and Culture</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4kCJNjhOe" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63ZERPcEZUYVd2YkU/view">Schools/Education <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VJ3a_s2dl" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Open Space and Recreation</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VkqUEoh_l" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63M1loZXRabTkzNEk/view">NYCHA <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NJtedj3de" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Housing Preservation</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyK6Sjn_g" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5>Small Business</h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/Ey9Y_j3_e" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>NYCHA</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NJtedj3de" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63SmtnNGdZM3YwRkE/view">Housing Preservation <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyK6Sjn_g" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Small Business, Economic, &amp; Workforce Development</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/Ey9Y_j3_e" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHMDJrNXBMY2gzQVU/view">Open Space <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VkqUEoh_l" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Schools and Education</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VJ3a_s2dl" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHbW85bkZRajFRTDQ/view">Arts + Culture <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4kCJNjhOe" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Pre-K, Afterschool and Daycare</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/41yQYihOl" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHS1VnQ1dMZnBTVkk/view">Safety <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyL2Kinux" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Environment and Transportation</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4JD_Ysnug" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHaVA0VXNGTFlJNkk/view">Health/Seniors <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/V11eqjh_g" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Safety</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyL2Kinux" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5>Affordable Housing</h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NJ2Xcj2_g" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Health and Seniors</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/V11eqjh_g" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHU3A3VlRKUll5Wjg/view">Environment/Transportation/Energy <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4JD_Ysnug" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Affordable Housing Development</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NJ2Xcj2_g" target="_blank">Take the Poll</a></div>
         </div>
-        <div class="row collapse">
-          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHem9wZFJQdGl5OWM/view">Zoning/Land Use/Affordable Housing Development <small>(PDF)</small></a></h5></div>
-          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyU_9snux" target="_blank">Take the Poll</a></div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Zoning and Land Use</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyU_9snux" target="_blank">Take the Poll</a></div>
         </div>
       </div>
     </div>
