--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p class="full-width some-margin-bottom"><small><em><strong>* Polls powered by D21</strong></em></small></p>
       </div>
       <div class="columns large-4">
-        <p class="text-small">For each poll, you're given “plus votes” and “minus votes” (indicated by a + or -). Use plus votes to identify which objectives or recommendations you most want to prioritize for implementation. Une minus votes to identify recommendations that you disagree with. The number of + and – votes you have is limited, so use them wisely.</p>
+        <p class="text-small">For each poll, you're given “plus votes” and “minus votes” (indicated by a + or -). Use plus votes to identify which objectives or recommendations you most want to prioritize for implementation. Use minus votes to identify recommendations that you disagree with. The number of + and – votes you have is limited, so use them wisely.</p>
         <p class=""><strong>These polls will close at 11:59pm on January 31.</strong></p>
         <p class="text-small extra-margin-bottom">The Steering Committee will then review these priorities and use your feedback to strengthen the final plan.</p>
       </div>
