add spanish d21 polls

--- a/es/index.html
+++ b/es/index.html
@@ -25,6 +25,7 @@
           <!-- Left Nav Section -->
           <ul class="left">
             <li class=""><a href="#about">Sobre</a></li>
+            <li><a href="#recommendations">Recomendaciones</a></li>
             <li class="has-dropdown">
               <a href="#get-involved">Participe</a>
               <ul class="dropdown">
@@ -58,6 +59,79 @@
         <h3 class="">Estamos trabajando con usted para crear un plan para el barrio basado en las necesidades de&nbsp;la&nbsp;comunidad de&nbsp;East&nbsp;Harlem.</h3>
       </div>
     </div>
+
+    <a id="recommendations"></a>
+
+    <div class="row">
+      <div class="columns">
+        <h3>¡Necesitamos tu perspectiva!</h3>
+      </div>
+      <div class="columns large-8">
+        <p class="text-xlarge full-width tiny-margin-bottom">El Plan Comunitario de East Harlem ha desarrollado objetivos y recomendaciones específicos a tópicos que han sido aprobados por el Comité Directivo. Estaremos colectando perspectivas en el fórum comunitario el 27 de Enero. En mientras, por favor ayuda a priorizar estas recomendaciones usando estas encuestas.</p>
+        <p class="full-width some-margin-bottom"><small><em><strong>* Encuestas energizadas por D21</strong></em></small></p>
+      </div>
+      <div class="columns large-4">
+        <p class="text-small">Para cada encuesta, tienes “votos más” y “votos menos” (indicados por un + o un -). Usa votos-más para identificar cuales objetivos o recomendaciones tú quieres priorizar para implementación. Usa votos-menos para identificar que recomendaciones están en desacuerdo a tu perspectiva. El número de + y – votos es limitado, así que úsalos sabiamente. </p>
+        <p class=""><strong>Estas encuestas cerraran a las 11:59pm el 31 de Enero.</strong></p>
+        <p class="text-small extra-margin-bottom">El Comité Directivo revisara estas prioridades y usara tu perspectiva para fortalecer el plan final.</p>
+      </div>
+      <div class="columns">
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Objetivos</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VJZ4H1-Kx" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Artes y Cultura</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/E1VueSeFx" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Parques, Espacios Abiertos y Recreacion</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/EkZkLrgFg" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Preservacion de Viviendas</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4kTpLwxKg" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>NYCHA</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4JwfAceKl" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Pequeñas Empresas, Economía y Desarrollo de Trabajos</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VJh-0igKl" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Escuelas y Educación</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/N1QyfpgYg" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Programas Después de la Escuela, Guarderías y Pre-Kínder</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/EkoYX6xFx" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Medio Ambiente/Transportación</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/EJZMRTgFx" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Seguridad</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/EJMflCgFx" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Salud/Personas Mayores</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NJ4FXRxYg" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Desarrollo de Viviendas Asequibles</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/EkcVuAeYx" target="_blank">Toma Encuesta</a></div>
+        </div>
+        <div class="row">
+          <div class="medium-8 medium-push-4 columns"><h5>Zonificación y Uso de Suelo</h5></div>
+          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VykUp0etl" target="_blank">Toma Encuesta</a></div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
 
     <div class="row" id="about">
       <div class="columns large-5">
