add spanish video

--- a/es/index.html
+++ b/es/index.html
@@ -56,7 +56,15 @@
 
     <div class="row full-width callout">
       <div class="columns large-10 large-centered text-center">
-        <h3 class="">Estamos trabajando con usted para crear un plan para el barrio basado en las necesidades de&nbsp;la&nbsp;comunidad de&nbsp;East&nbsp;Harlem.</h3>
+        <div class="center-box-table">
+          <div class="center-box-cell text">
+            <h3 class="">Estamos trabajando con usted para crear un plan para el barrio basado en las necesidades <span class="nowrap-medium-up">de la comunidad</span> <span class="nowrap-medium-up">de EastHarlem.</span></h3>
+          </div>
+          <div class="center-box-cell video">
+            <!-- Video -->
+            <iframe src="https://drive.google.com/file/d/0B_Cgql7JSFbSNjR4N0NSY3ViSmM/preview" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
     </div>
 
