--- a/es/index.html
+++ b/es/index.html
@@ -75,7 +75,7 @@
         <h3>¡Necesitamos tu perspectiva!</h3>
       </div>
       <div class="columns large-8">
-        <p class="text-xlarge full-width tiny-margin-bottom">El Plan Comunitario de East Harlem ha desarrollado objetivos y recomendaciones específicos a tópicos que han sido aprobados por el Comité Directivo. Estaremos colectando perspectivas en el fórum comunitario el 27 de Enero. En mientras, por favor ayuda a priorizar estas recomendaciones usando estas encuestas.</p>
+        <p class="text-xlarge full-width tiny-margin-bottom">El Plan Comunitario de East Harlem ha desarrollado objetivos y recomendaciones temas específicos que han sido aprobados por el Comité Directivo. Estaremos colectando perspectivas en el fórum comunitario el 27 de Enero. En mientras, por favor ayuda a priorizar estas recomendaciones usando estas encuestas.</p>
         <p class="full-width some-margin-bottom"><small><em><strong>* Encuestas energizadas por D21</strong></em></small></p>
       </div>
       <div class="columns large-4">
