--- a/es/index.html
+++ b/es/index.html
@@ -58,7 +58,7 @@
       <div class="columns large-10 large-centered text-center">
         <div class="center-box-table">
           <div class="center-box-cell text">
-            <h3 class="">Estamos trabajando con usted para crear un plan para el barrio basado en las necesidades <span class="nowrap-medium-up">de la comunidad</span> <span class="nowrap-medium-up">de EastHarlem.</span></h3>
+            <h3 class="">Estamos trabajando con usted para crear un plan para el barrio basado en las necesidades <span class="nowrap-medium-up">de la comunidad</span> <span class="nowrap-medium-up">de East Harlem.</span></h3>
           </div>
           <div class="center-box-cell video">
             <!-- Video -->
@@ -75,7 +75,7 @@
         <h3>¡Necesitamos tu perspectiva!</h3>
       </div>
       <div class="columns large-8">
-        <p class="text-xlarge full-width tiny-margin-bottom">El Plan Comunitario de East Harlem ha desarrollado objetivos y recomendaciones temas específicos que han sido aprobados por el Comité Directivo. Estaremos colectando perspectivas en el fórum comunitario el 27 de Enero. En mientras, por favor ayuda a priorizar estas recomendaciones usando estas encuestas.</p>
+        <p class="text-xlarge full-width tiny-margin-bottom">El Plan Comunitario de East Harlem ha desarrollado objetivos y recomendaciones sobre temas específicos que han sido aprobados por el Comité Directivo. Estaremos colectando perspectivas en el fórum comunitario el 27 de Enero. En mientras, por favor ayuda a priorizar estas recomendaciones usando estas encuestas.</p>
         <p class="full-width some-margin-bottom"><small><em><strong>* Encuestas energizadas por D21</strong></em></small></p>
       </div>
       <div class="columns large-4">
