add PDFs of all recs

--- a/es/index.html
+++ b/es/index.html
@@ -136,6 +136,7 @@
           <div class="medium-8 medium-push-4 columns"><h5>Zonificación y Uso de Suelo</h5></div>
           <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VykUp0etl" target="_blank">Toma Encuesta</a></div>
         </div>
+        <p class="extra-margin"><a href="Survey_Recs-es.pdf">Vea Todas las Recomendaciones</a></p>
       </div>
     </div>
 
