--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
           <div class="medium-8 medium-push-4 columns"><h5>Zoning and Land Use</h5></div>
           <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyU_9snux" target="_blank">Take the Poll</a></div>
         </div>
+        <p class="extra-margin"><a href="Survey_Recs-en.pdf">See all Recommendations</a></p>
       </div>
     </div>
 
