--- a/index.html
+++ b/index.html
@@ -84,68 +84,10 @@
         <h3>We need your Feedback!</h3>
       </div>
       <div class="columns large-8">
-        <p class="text-xlarge full-width tiny-margin-bottom">The East Harlem Neighborhood Plan has developed topic-specific objectives and recommendations that have been approved by the Steering Committee. We are collecting feedback at the community forum on <strong>January&nbsp;27</strong>. In the meantime, please help prioritize these recommendations using these online polls.</p>
-        <p class="full-width some-margin-bottom"><small><em><strong>* Polls powered by D21</strong></em></small></p>
+        <p class="text-xlarge full-width tiny-margin-bottom">The East Harlem Neighborhood Plan has developed topic-specific objectives and recommendations that have been approved by the Steering Committee.</p>
       </div>
       <div class="columns large-4">
-        <p class="text-small">For each poll, you're given “plus votes” and “minus votes” (indicated by a + or -). Use plus votes to identify which objectives or recommendations you most want to prioritize for implementation. Use minus votes to identify recommendations that you disagree with. The number of + and – votes you have is limited, so use them wisely.</p>
-        <p class=""><strong>These polls will close at 11:59pm on January 31.</strong></p>
-        <p class="text-small extra-margin-bottom">The Steering Committee will then review these priorities and use your feedback to strengthen the final plan.</p>
-      </div>
-      <div class="columns">
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Objectives</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4kCa9i3Og" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Arts and Culture</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4kCJNjhOe" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Open Space and Recreation</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VkqUEoh_l" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Housing Preservation</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyK6Sjn_g" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>NYCHA</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NJtedj3de" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Small Business, Economic, &amp; Workforce Development</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/Ey9Y_j3_e" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Schools and Education</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VJ3a_s2dl" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Pre-K, Afterschool and Daycare</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/41yQYihOl" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Environment and Transportation</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4JD_Ysnug" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Safety</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyL2Kinux" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Health and Seniors</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/V11eqjh_g" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Affordable Housing Development</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NJ2Xcj2_g" target="_blank">Take the Poll</a></div>
-        </div>
-        <div class="row">
-          <div class="medium-8 medium-push-4 columns"><h5>Zoning and Land Use</h5></div>
-          <div class="medium-4 medium-pull-8 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyU_9snux" target="_blank">Take the Poll</a></div>
-        </div>
-        <p class="extra-margin"><a href="Survey_Recs-en.pdf">See all Recommendations</a></p>
+        <a class="button expand" href="Survey_Recs-en.pdf">See the Recommendations</a>
       </div>
     </div>
 
