nix recs header

--- a/es/index.html
+++ b/es/index.html
@@ -71,14 +71,9 @@
     <a id="recommendations"></a>
 
     <div class="row">
-      <div class="columns">
-        <h3>¡Necesitamos tu perspectiva!</h3>
-      </div>
-      <div class="columns large-8">
-        <p class="text-xlarge full-width tiny-margin-bottom">El Plan Comunitario de East Harlem ha desarrollado objetivos y recomendaciones sobre temas específicos que han sido aprobados por el Comité Directivo. </p>
-      </div>
-      <div class="columns large-4">
-        <a class="button expand" href="Survey_Recs-es.pdf">Vea Todas las Recomendaciones</a>
+      <div class="columns large-8 large-centered text-center">
+        <p class="text-xlarge">El Plan Comunitario de East Harlem ha desarrollado objetivos y recomendaciones sobre temas específicos que han sido aprobados por el Comité Directivo. </p>
+        <a class="button" href="Survey_Recs-es.pdf">Vea Todas las Recomendaciones</a>
       </div>
     </div>
 
