--- a/index.html
+++ b/index.html
@@ -80,14 +80,9 @@
     <a id="recommendations"></a>
 
     <div class="row">
-      <div class="columns">
-        <h3>We need your Feedback!</h3>
-      </div>
-      <div class="columns large-8">
-        <p class="text-xlarge full-width tiny-margin-bottom">The East Harlem Neighborhood Plan has developed topic-specific objectives and recommendations that have been approved by the Steering Committee.</p>
-      </div>
-      <div class="columns large-4">
-        <a class="button expand" href="Survey_Recs-en.pdf">See the Recommendations</a>
+      <div class="columns large-8 large-centered text-center">
+        <p class="text-xlarge">The East Harlem Neighborhood Plan has developed topic-specific objectives and recommendations that have been approved by the Steering Committee.</p>
+        <a class="button" href="Survey_Recs-en.pdf">See the Recommendations</a>
       </div>
     </div>
 
