--- a/es/index.html
+++ b/es/index.html
@@ -25,7 +25,7 @@
           <!-- Left Nav Section -->
           <ul class="left">
             <li class=""><a href="#about">Sobre</a></li>
-            <li><a href="#recommendations">Recomendaciones</a></li>
+            <!-- <li><a href="#recommendations">Recomendaciones</a></li> -->
             <li class="has-dropdown">
               <a href="#get-involved">Participe</a>
               <ul class="dropdown">
@@ -51,6 +51,7 @@
       </div>
       <div class="columns small-12 large-7 tiny-padding-top">
         <p class="text-large">¡Bienvenidos! El objetivo del Plan Comunitario de East Harlem es el desarrollo de una visión basada en la comunidad y la estrategia para su implementación. La Presidenta del Concejo Municipal de la Ciudad de Nueva York, Melissa Mark-Viverito, junto con la Junta Comunal 11, Voces Comunitarias Escuchadas, y la Presidenta del Condado de Manhattan, Gale Brewer, están liderando un esfuerzo para involucrar a los residentes e interesados locales en conversaciones significativas sobre el futuro del este de Harlem.</p>
+        <a href="../EHNP_FINAL_REPORT.pdf" class="button large">Descargar el Plan Definitivo <small>(PDF Inglés)</small></a>
       </div>
     </div>
 
@@ -68,7 +69,7 @@
       </div>
     </div>
 
-    <a id="recommendations"></a>
+    <!-- <a id="recommendations"></a>
 
     <div class="row">
       <div class="columns large-8 large-centered text-center">
@@ -77,7 +78,7 @@
       </div>
     </div>
 
-    <hr>
+    <hr> -->
 
     <div class="row" id="about">
       <div class="columns large-5">
