--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <!-- Left Nav Section -->
           <ul class="left">
             <li class=""><a href="#about">About</a></li>
-            <li><a href="#recommendations">Recommendations</a></li>
+            <!-- <li><a href="#recommendations">Recommendations</a></li> -->
             <li class="has-dropdown">
               <a href="#get-involved">Get Involved</a>
               <ul class="dropdown">
@@ -49,13 +49,14 @@
       <div class="columns small-10 small-push-1 medium-6 medium-push-3 large-5 large-push-0">
         <h1 class="hide-for-print"><img src="images/east-harlem-neighborhood-plan.gif" alt="East Harlem Neighborhood Plan" class="logo"></h1>
       </div>
-      <div class="columns small-12 large-7 extra-padding-top">
+      <div class="columns small-12 large-7 tiny-padding-top">
         <p class="text-large">Welcome! The goal of the East Harlem Neighborhood Plan
           is to develop a community-based vision and strategy for implementation.
           New York City Council Speaker Melissa Mark-Viverito along with Community
           Board 11, Community Voices Heard, and Manhattan Borough President Gale
           Brewer are leading an effort to engage local residents and stakeholders
           in meaningful conversations about the future of East Harlem.</p>
+          <a href="EHNP_FINAL_REPORT.pdf" class="button large">Download the Final Plan <small>(PDF)</small></a>
       </div>
     </div>
 
@@ -77,7 +78,7 @@
       </div>
     </div>
 
-    <a id="recommendations"></a>
+    <!-- <a id="recommendations"></a>
 
     <div class="row">
       <div class="columns large-8 large-centered text-center">
@@ -86,7 +87,7 @@
       </div>
     </div>
 
-    <hr>
+    <hr> -->
 
     <div class="row" id="about">
       <div class="columns large-5">
