uncomment es recommendations

--- a/es/index.html
+++ b/es/index.html
@@ -25,7 +25,7 @@
           <!-- Left Nav Section -->
           <ul class="left">
             <li class=""><a href="#about">Sobre</a></li>
-            <!-- <li><a href="#recommendations">Recomendaciones</a></li> -->
+            <li><a href="#recommendations">Recomendaciones</a></li>
             <li class="has-dropdown">
               <a href="#get-involved">Participe</a>
               <ul class="dropdown">
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-    <!-- <a id="recommendations"></a>
+    <a id="recommendations"></a>
 
     <div class="row">
       <div class="columns large-8 large-centered text-center">
@@ -78,7 +78,7 @@
       </div>
     </div>
 
-    <hr> -->
+    <hr>
 
     <div class="row" id="about">
       <div class="columns large-5">
