add survey & email

--- a/es/index.html
+++ b/es/index.html
@@ -80,6 +80,14 @@
 
     <hr>
 
+    <div class="row">
+      <div class="columns large-9 large-centered text-center">
+        <h4>Encuesta de Desarrollo de la Visión Comunitaria para Calle 111</h4>
+        <p class="">No asistió al taller pero le gustaría compartir sus ideas para el desarrollo de nuevas viviendas asequibles y comodidades en el sitio ubicado en la Calle 111? Por favor, envíe sus respuestas a esta encuesta antes del 16 de marzo a través: <strong><a href="http://goo.gl/forms/PA6rWxFMdA">http://goo.gl/forms/PA6rWxFMdA</a></strong> o enviarlas a <strong><a href="mailto:E111vision@hpd.nyc.gov">E111vision@hpd.nyc.gov</a></strong>.</p>
+      </div>
+    </div>
+
+    <hr>
     <div class="row" id="about">
       <div class="columns large-5">
         <div class="row">
