--- a/index.html
+++ b/index.html
@@ -78,16 +78,14 @@
       </div>
     </div>
 
-    <!-- <a id="recommendations"></a>
-
     <div class="row">
-      <div class="columns large-8 large-centered text-center">
-        <p class="text-xlarge">The East Harlem Neighborhood Plan has developed topic-specific objectives and recommendations that have been approved by the Steering Committee.</p>
-        <a class="button" href="Survey_Recs-en.pdf">See the Recommendations</a>
+      <div class="columns large-9 large-centered text-center">
+        <h4>East 111th Street Community Visioning Survey</h4>
+        <p class="">Weren’t able to make it to the workshop? Still want to share input on new affordable housing development at the East 111th Street site? Submit your answers to this survey by March 16, 2016: <strong><a href="http://goo.gl/forms/PA6rWxFMdA">fill out the survey</a></strong> OR send them to <strong><a href="mailto:E111vision@hpd.nyc.gov">E111vision@hpd.nyc.gov</a></strong>.</p>
       </div>
     </div>
 
-    <hr> -->
+    <hr>
 
     <div class="row" id="about">
       <div class="columns large-5">
