update final-final plan PDF

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           Board 11, Community Voices Heard, and Manhattan Borough President Gale
           Brewer are leading an effort to engage local residents and stakeholders
           in meaningful conversations about the future of East Harlem.</p>
-          <a href="EHNP_FINAL_REPORT.pdf" class="button large">Download the Final Plan <small>(PDF)</small></a>
+          <a href="EHNP_FINAL_FINAL_LORES.pdf" class="button large">Download the Final Plan <small>(PDF)</small></a>
       </div>
     </div>
 
